hphp/test/slow/parser/async_bad_class.php.expectf

Fatal error: 'async' cannot be used on an abstract method. Use an Awaitable<...> return type instead. in %s/async_bad_class.php on line 3
